# linked-notes-mcp

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  results.md  vite.config.js
.superpowers/sdd/: search-fix-report.md
docs/: COWORK-INTEGRATION.md  GUIDE.md  INGESTION-SPEC.md  QUICKSTART.md  USAGE-RULES.md  UX-ROADMAP.md  VISUALIZER-SPEC.md
docs/plans/: 2026-07-01-eval-and-dspy.md  2026-07-01-retrieval-benchmark.md
docs/specs/: 2026-07-01-eval-and-dspy-design.md
evals/: config.py  gen.py  llm.py  stats.py
evals/dataset/: meta.json  queries.json
evals/dataset/vault/: analytics-platform.md  api-gateway.md  api-management.md  architecture-patterns.md  auth-service.md  authentication-architecture.md  backend-infrastructure.md  cache-layer-decision.md  compliance-framework.md  data-layer.md  (+50 more)
example-vault/: api-gateway.md  authentication-service.md  database-design.md  deployment-strategy.md  jwt-tokens.md  meeting-notes.md  microservices.md  project-architecture.md  user-service.md
optimize/: metric.py  retrieval.py  run.py  salience.py
scripts/: run_linked_notes_mcp.py  run_linked_notes_ui.py
src/linked_notes_mcp/: __init__.py  common.py  embeddings.py  extraction.py  graph.py  ingestion.py  parser.py  rank.py  server.py  templates.py  visualizer.py
tests/: conftest.py  test_embeddings.py  test_eval_config.py  test_eval_isolation.py  test_gen.py  test_get_context_salience.py  test_graph.py  test_llm.py  test_metric.py  test_parser.py  test_rank.py  test_retrieval.py  test_run.py  test_salience.py  test_server.py  test_stats.py  test_templates.py  test_visualizer.py
ui/: index.html
ui/src/: App.jsx  app.css  main.jsx
(+17 files in other folders)
