[project]
name = "linked-notes-mcp"
version = "0.1.0"
description = "MCP server for navigating markdown knowledge graphs via wikilinks"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Rohan", email = "rohan@example.com" }]
requires-python = ">=3.10"
keywords = ["mcp", "markdown", "knowledge-graph", "wikilinks", "obsidian", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "networkx>=3.0",
    "pyyaml>=6.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
linked-notes-mcp = "linked_notes_mcp.server:main"

[project.urls]
Homepage = "https://github.com/rgodse/linked-notes-mcp"
Repository = "https://github.com/rgodse/linked-notes-mcp"
Issues = "https://github.com/rgodse/linked-notes-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linked_notes_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
